test/modules/shadowing/var-shadows-public-import.good
var-shadows-public-import.chpl:8: error: symbol x is multiply defined
var-shadows-public-import.chpl:3: note: also defined here
